2010-01-18 Magnus Hagdorn
 * example-drivers/eis/src/eis_glide.F90: API change
 * libglide/glide.F90: ditto
 * tests/EISMINT/src/simple_glide.F90: ditto
 * libglide/lithot.F90: pass lithot_type in addition to glide_global_type
 * libglide/lithot1d.F90:ditto

2010-01-18 Magnus Hagdorn
 * configure.in: change version to 1.7.1, since trunk will become
   version 1.8 eventually
 * glimmer-cism-config.in: remove some unused variables

2010-01-15 Magnus Hagdorn
 * libglide/Makefile.am: add some new files, remove lithot3d.F90
 * libglide/glide.F90: use new procedures to read lithot configuration
 * libglide/glide_nc_custom.F90: use new API
 * libglide/glide_stop.F90: ditto
 * libglide/glide_setup.F90: move gthf procedures to lithot_setup.F90
 * libglide/glide_types.F90: move lithot_type to lithot_types.F90
 * libglide/lithot.F90: remove 3D geothermal heat calculations - they are
   overkill
 * libglide/lithot3d.F90: deleted - overkill
 * libglide/lithot_setup.F90: new
 * libglide/lithot_types.F90: new

2010-01-15 Magnus Hagdorn
 * example-drivers/EISMINT-3/src/Makefile.am: reorder libraries
 * example-drivers/eis/src/Makefile.am: ditto
 * tests/EISMINT/src/Makefile.am: ditto
 * tests/exact-isothermal/src/Makefile.am: ditto

2010-01-15 Magnus Hagdorn
 * libglide/isostasy.F90: fix bugs were I mixed up array bounds

2010-01-14 Magnus Hagdorn
 * libglide/glide_types.F90: move definition of geothermal heatflux parameter to
   lithot derived type
 * libglide/glide.F90: correctly resolve geothermal heatflux parameter
 * libglide/glide_setup.F90: ditto
 * libglide/lithot.F90: ditto

2010-01-13 Magnus Hagdorn
 * libglide/Makefile.am: rename lithot files and bundle them into a convinience
   library
 * libglide/glide.F90: rename modules
 * libglide/glide_stop.F90: ditto
 * libglide/lithot_vars.def: changed name to lithot
 * libglide/glide_lithot1d.F90 renamed to libglide/lithot1d.F90
 * libglide/glide_lithot3d.F90 renamed to libglide/lithot3d.F90